--- a/project.yml
+++ b/project.yml
@@ -19,6 +19,11 @@ schemes:
       targets:
         SwiftUIUIKitAppDelegate: all
 
+  MusicSeekBar:
+    build:
+      targets:
+        MusicSeekBar: all
+
 targets:
   StoryboardUIKitAppDelegate:
     type: application
@@ -34,4 +39,11 @@ targets:
     platform: iOS
     sources: 
       - SwiftUIUIKitAppDelegate
+      - Configs
+
+  MusicSeekBar:
+    type: application
+    platform: iOS
+    sources: 
+      - MusicSeekBar
       - Configs
